test/files/neg/tcpoly_typealias.check
tcpoly_typealias.scala:37: error: The kind of type m does not conform to the expected kind of type m[+x] in trait A.
BInv.this.m's type parameters do not match type m's expected parameters:
type x (in trait BInv) is invariant, but type x (in trait A) is declared covariant
  type m[x] = FooCov[x] // error: invariant x in alias def
       ^
tcpoly_typealias.scala:41: error: The kind of type m does not conform to the expected kind of type m[+x] in trait A.
BCon.this.m's type parameters do not match type m's expected parameters:
type x (in trait BCon) is contravariant, but type x (in trait A) is declared covariant
  type m[-x] = FooCon[x] // error: contravariant x
       ^
tcpoly_typealias.scala:45: error: The kind of type m does not conform to the expected kind of type m[+x] in trait A.
BBound.this.m's type parameters do not match type m's expected parameters:
type x (in trait BBound)'s bounds <: String are stricter than type x (in trait A)'s declared bounds >: Nothing <: Any
  type m[+x <: String] = FooBound[x] // error: x with stricter bound
       ^
three errors found
